Unit test cleanup (#9)
Clean-up of unit tests.