@@ -4,26 +4,26 @@ import gmbh.dtap.refine.api.ImportOptionMetadata;
 import gmbh.dtap.refine.api.RefineException;
 import gmbh.dtap.refine.api.RefineProject;
 import org.apache.commons.io.IOUtils;
-import org.apache.http.HttpEntity;
 import org.apache.http.HttpResponse;
-import org.apache.http.StatusLine;
 import org.json.JSONException;
 import org.junit.Before;
+import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.ExpectedException;
 import org.junit.runner.RunWith;
-import org.mockito.Mock;
 import org.mockito.runners.MockitoJUnitRunner;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.charset.Charset;
 import java.time.OffsetDateTime;
 import java.util.List;
 
-import static org.apache.commons.io.IOUtils.toInputStream;
+import static gmbh.dtap.refine.test.HttpMock.mockHttpResponse;
+import static org.apache.http.entity.ContentType.APPLICATION_JSON;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.fail;
-import static org.mockito.Mockito.when;
 
 /**
  * Unit Tests for {@link DeleteProjectResponseHandler}.
@@ -33,70 +33,49 @@ import static org.mockito.Mockito.when;
 @RunWith(MockitoJUnitRunner.class)
 public class ProjectMetadataResponseHandlerTest {
 
-   private ProjectMetadataResponseHandler responseHandler;
-   @Mock private HttpResponse httpResponse;
-   @Mock private HttpEntity httpEntity;
-   @Mock private StatusLine statusLine;
+   private static final URI BASE_URL = URI.create("http://localhost:3333/");
+   private static final Charset UTF_8 = Charset.forName("UTF-8");
+
+   @Rule public ExpectedException thrown = ExpectedException.none();
+   private ProjectMetadataResponseHandler projectMetadataResponseHandler;
 
    @Before
    public void setUp() throws MalformedURLException {
-      URL baseUrl = new URL("http://localhost:3333/");
-      responseHandler = new ProjectMetadataResponseHandler(new ResponseParser(baseUrl));
+      projectMetadataResponseHandler = new ProjectMetadataResponseHandler(new ResponseParser(BASE_URL.toURL()));
    }
 
    @Test
-   public void should_throw_exception_on_unexpected_status() throws IOException {
-      when(statusLine.getStatusCode()).thenReturn(500);
-      when(httpResponse.getStatusLine()).thenReturn(statusLine);
+   public void should_throw_exception_when_response_status_is_500() throws IOException {
+      HttpResponse httpResponse = mockHttpResponse(500);
 
-      try {
-         responseHandler.handleResponse(httpResponse);
-         fail("expected exception not thrown");
-      } catch (RefineException expectedException) {
-         assertThat(expectedException.getMessage()).isEqualTo("Unexpected response status: 500");
-      }
+      thrown.expect(RefineException.class);
+      projectMetadataResponseHandler.handleResponse(httpResponse);
    }
 
    @Test
-   public void should_throw_exception_on_malformed_json() throws IOException, JSONException {
-      String expectedResponseBody = "This is clearly no JSON.";
+   public void should_throw_exception_when_response_body_is_no_json() throws IOException, URISyntaxException {
+      String responseBody = IOUtils.toString(getClass().getResource("/responseBody/no-json.txt").toURI(), UTF_8);
+      HttpResponse httpResponse = mockHttpResponse(200, APPLICATION_JSON, responseBody);
 
-      when(statusLine.getStatusCode()).thenReturn(200);
-      when(httpEntity.getContent()).thenReturn(toInputStream(expectedResponseBody, "UTF-8"));
-      when(httpResponse.getStatusLine()).thenReturn(statusLine);
-      when(httpResponse.getEntity()).thenReturn(httpEntity);
-      try {
-         responseHandler.handleResponse(httpResponse);
-         fail("expected exception not thrown");
-      } catch (RefineException expectedException) {
-         assertThat(expectedException.getMessage()).startsWith("Parser error:");
-      }
+      thrown.expect(RefineException.class);
+      projectMetadataResponseHandler.handleResponse(httpResponse);
    }
 
    @Test
    public void should_return_successful_but_empty_response() throws IOException, JSONException {
-      String responseBody = "{}";
+      HttpResponse httpResponse = mockHttpResponse(200, APPLICATION_JSON, "{}");
 
-      when(statusLine.getStatusCode()).thenReturn(200);
-      when(httpResponse.getStatusLine()).thenReturn(statusLine);
-      when(httpResponse.getEntity()).thenReturn(httpEntity);
-      when(httpEntity.getContent()).thenReturn(toInputStream(responseBody, "UTF-8"));
-
-      ProjectMetadataResponse projectMetadataResponse = responseHandler.handleResponse(httpResponse);
+      ProjectMetadataResponse projectMetadataResponse = projectMetadataResponseHandler.handleResponse(httpResponse);
       assertThat(projectMetadataResponse).isNotNull();
       assertThat(projectMetadataResponse.getRefineProjects()).hasSize(0);
    }
 
    @Test
-   public void should_return_successful_response() throws IOException, JSONException {
-      String responseBody = IOUtils.toString(this.getClass().getResource("/testProjectMetadataResponseBody.json"), "UTF-8");
+   public void should_return_successful_response() throws IOException, JSONException, URISyntaxException {
+      String responseBody = IOUtils.toString(getClass().getResource("/responseBody/project-metadata.json").toURI(), UTF_8);
+      HttpResponse httpResponse = mockHttpResponse(200, APPLICATION_JSON, responseBody);
 
-      when(statusLine.getStatusCode()).thenReturn(200);
-      when(httpResponse.getStatusLine()).thenReturn(statusLine);
-      when(httpResponse.getEntity()).thenReturn(httpEntity);
-      when(httpEntity.getContent()).thenReturn(toInputStream(responseBody, "UTF-8"));
-
-      ProjectMetadataResponse projectMetadataResponse = responseHandler.handleResponse(httpResponse);
+      ProjectMetadataResponse projectMetadataResponse = projectMetadataResponseHandler.handleResponse(httpResponse);
       assertThat(projectMetadataResponse).isNotNull();
       assertThat(projectMetadataResponse.getRefineProjects()).hasSize(2);
       List<RefineProject> refineProjects = projectMetadataResponse.getRefineProjects();
